Tag page styling. Fix overflow is with long tags

--- a/src/style/sass/all.sass
+++ b/src/style/sass/all.sass
@@ -22,9 +22,16 @@ h1
   font-size: 3rem
   line-height: 1.05em
 
+  &.small
+    font-size: 2rem
+    line-height: 1.25em
+
+
   @media screen and (max-width: 767px)
     font-size: 2rem
     line-height: 1.25em
+    &.small
+      font-size: 1.5rem
 
 h2
   font-size: 2.25rem
